@@ -1,6 +1,9 @@
 # ChangeLog for games-fps/xonotic
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  01 Jan 2011; Nikoli <nikoli@lavabit.com> xonotic-9999.ebuild:
+  fix live ebuild
 
 *xonotic-0.1.0_pre (30 Dec 2010)
 
